Add reference solution

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <div>
       <h1>Countdown</h1>
       <div>
-        <input type="number" placeholder="seconds" />
-        <button>Start</button>
-        <button>Stop</button>
+        <input type="number" placeholder="seconds" id="secondsInput">
+        <button id="start-btn">Start</button>
+        <button id="stop-btn">Stop</button>
       </div>
       <div>
         <h3>Countdown Progress</h3>
         <div>
-          <span>00m</span>
+          <span id="minutesProgress">00m</span>
           <span>:</span>
-          <span>00s</span>
+          <span id="secondsProgress">00s</span>
         </div>
       </div>
     </div>
